// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Project simplebank{
    database_type:'PostgreSQL'
    Note: '''
        # Simple Bank Database
        '''
}

Table users as U {
  username varchar [pk]
  hashed_password varchar [not null]
  full_name varchar [not null]
  email varchar [unique,not null]
  password_changed_at timestamptz [not null, default: '0001-01-01 00:00:00Z']
  created_at timestamptz [not null,default: `now()`]
}

Table accounts as A {
  id bigserial [pk]
  owner varchar [ref: > U.username ,not null]
  balance bigint [not null]
  currency varchar [not null]
  created_at timestamptz [not null,default:`now()`]

  indexes {
    owner
    (owner,currency) [unique]
  }
}

Table entries {
  id bigserial [pk]
  account_id bigint [ref: > A.id , not null]
  amount bigint [not null, note:'can be negative or positive']
  created_at timestamptz [not null,default:`now()`]
}

Table transfers {
  id bigserial [pk]
  from_account_id bigint [ref: > A.id , not null]
  to_account_id bigint [ref: > A.id , not null]
  amount bigint [not null, note:'must be positive']
   created_at timestamptz [not null,default:`now()`]

   indexes {
    from_account_id
    to_account_id
    (from_account_id,to_account_id)
   }
}

Table sessions {
  id uuid [pk]
  username varchar [ref: > U.username, not null]
  refresh_token varchar [not null]
  user_agent varchar [not null]
  client_ip varchar [unique,not null]
  is_blocked boolean [not null,default: false]
  expires_at timestampz [not null]
  created_at timestampz [not null,default:`now()`]
}